[project]
name = "qwanamiz"
version = "0.1.0"
description = "Quantitative Wood Anatomy Measurements"
authors = [{name = "Samuel Bouchut"}]
license = "GNU General Public License v3.0"
readme = "README.md"
requires-python=">=3.12"
dependencies = ["numpy (>=2.0.0,<3.0.0)", "scikit-image (>=0.25.0,<0.27.0)", "pandas (>=2.3.0,<4.0.0)", "matplotlib (>=3.9.0,<4.0.0)"]

[project.optional-dependencies]
viz  = ["napari[all] (>=0.6.0,<0.8.0)"]
docs = ["jupyter (>=1.1.1)", "myst-nb (>=1.3.0)", "sphinx-autoapi (>=3.6.1)", "sphinx-rtd-theme (>=3.0.2)"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
qwanaflow  = "qwanamiz.qwanaflow:main"
qwanarings = "qwanamiz.qwanarings:main"
qwanaviz   = "qwanamiz.qwanaviz:main"

