[project]
name = "qwanamiz"
version = "0.1.0"
description = "Quantitative Wood Anatomy Measurements"
authors = [{name = "Samuel Bouchut"},
           {name = "Lucie Barbier"},
           {name = "Marc-André Lemay"},
           {name = "Enrico Tonelli"},
           {name = "Dominique Arseneault"},
           {name = "Marco Carrer"},
           {name = "Fabio Gennaretti"}
	   ]
license = "GNU General Public License v3.0"
readme = "README.md"
requires-python=">=3.11"
dependencies = ["numpy (>=2.0.0,<3.0.0)", "scikit-image (>=0.25.0,<0.27.0)", "pandas (>=2.3.0,<4.0.0)", "matplotlib (>=3.9.0,<4.0.0)"]

[project.optional-dependencies]
viz  = ["napari[all] (>=0.6.0,<0.8.0)"]
docs = ["myst-nb (>=1.1.0)",
	"sphinx-autoapi (>=3.6.0)",
	"sphinx-rtd-theme (>=3.0.0)"]
dev = ["notebook (>=7.5.0)", "ipykernel (>=6.31.0)"]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
qwanaflow  = "qwanamiz.qwanaflow:main"
qwanarings = "qwanamiz.qwanarings:main"
qwanaviz   = "qwanamiz.qwanaviz:main"

