[project]
name = "qwanamiz"
version = "1.0.0"
description = "Quantitative Wood Anatomy Measurements"
authors = [{name = "Samuel Bouchut", email = "samuel.bouchut@uqat.ca"},
           {name = "Lucie Barbier"},
           {name = "Marc-André Lemay", email = "marc-andre.lemay@uqat.ca"},
           {name = "Enrico Tonelli"},
           {name = "Dominique Arseneault"},
           {name = "Marco Carrer"},
           {name = "Fabio Gennaretti"}
	   ]
license = "GPL-3.0-only"
readme = "README.md"
requires-python=">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["numpy (>=2.0.0,<3.0.0)", "scikit-image (>=0.25.0,<0.27.0)", "pandas (>=2.3.0,<4.0.0)", "matplotlib (>=3.9.0,<4.0.0)"]

[project.optional-dependencies]
viz  = ["napari[all] (>=0.6.0,<0.8.0)"]
docs = ["myst-nb (>=1.1.0)",
	"sphinx-autoapi (>=3.6.0)",
	"sphinx-rtd-theme (>=3.0.0)"]
dev = ["notebook (>=7.5.0)", "ipykernel (>=6.31.0)"]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
qwanaflow  = "qwanamiz.qwanaflow:main"
qwanarings = "qwanamiz.qwanarings:main"
qwanaviz   = "qwanamiz.qwanaviz:main"
rings_edit = "qwanamiz.rings_edit:main"

[project.urls]
Homepage = "https://github.com/SamBcht/qwanamiz"
Issues = "https://github.com/SamBcht/qwanamiz/issues"
